--- a/skills.html
+++ b/skills.html
@@ -71,7 +71,7 @@
 
                 <div class="sec sec1">
                     <div class="skill">
-                        <p>HTML, CSS, JavaScript, React, Next.js, and more. This journey began with a spark of curiosity
+                        <p>HTML, CSS, JavaScript, and more. This journey began with a spark of curiosity
                             about the inner workings of websites and has since grown into a full-fledged passion. I've
                             dedicated myself to mastering these technologies and using them to create interactive,
                             user-friendly websites."</p>
